# fs-updater-cli

./: CMakeLists.txt  README.md  fs_updater_cli_doxy
cmake/: config.h.in
docs/: README.md  RETURN_CODES.md  contributing.md  getting-started.md  main_page.md
docs/diagrams/: signal-files.md
docs/integration/: azure-device-update.md  signal-files.md
docs/reference/: cli.md  return-codes.md
scripts/: build.sh
src/: main.cpp
src/cli/: SynchronizedSerial.cpp  SynchronizedSerial.h  cli.cpp  cli.h  cli_io.h  fs_updater_error.h  fs_updater_types.h  posix_helpers.h
src/logger/: LoggerSinkSerial.cpp  LoggerSinkSerial.h
